--- a/site/index.html
+++ b/site/index.html
@@ -1,17 +1,59 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Alytlife</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>At Least You Tried Life</title>
+  <meta name="description" content="Honest attempts at living better — mindset, money, and meaning in a messy world." />
   <style>
-    body { font-family: Arial, sans-serif; text-align: center; padding: 50px; }
-    h1 { color: #222; }
-    p { color: #666; }
+    body {
+      margin: 0;
+      font-family: 'Lora', serif;
+      background-color: #FAF7F2;
+      color: #333;
+      line-height: 1.7;
+      max-width: 720px;
+      margin: 0 auto;
+      padding: 2rem;
+    }
+    h1, h2 {
+      font-family: 'Playfair Display', serif;
+      color: #2E2B29;
+    }
+    a {
+      color: #B36A5E;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    header {
+      text-align: center;
+      padding-bottom: 2rem;
+      border-bottom: 1px solid #ddd;
+    }
+    footer {
+      text-align: center;
+      font-size: 0.9em;
+      color: #777;
+      margin-top: 4rem;
+    }
   </style>
 </head>
 <body>
-  <h1>Welcome to Alytlife</h1>
-  <p>Your future automated financial blog — live soon.</p>
+  <header>
+    <h1>At Least You Tried Life</h1>
+    <p>Honest attempts at living better.</p>
+  </header>
+
+  <main>
+    <h2>Welcome</h2>
+    <p>Welcome to <strong>At Least You Tried Life</strong> — a space for real stories, lessons, and experiments about what it means to live well in a messy, modern world.</p>
+    <p>We write about the small things that make life a little easier, the hard things we keep trying at, and everything in between.</p>
+  </main>
+
+  <footer>
+    <p>© 2025 At Least You Tried Life. Built with care and caffeine.</p>
+  </footer>
 </body>
 </html>
