--- a/site/index.html
+++ b/site/index.html
@@ -51,6 +51,10 @@
     <p>Welcome to <strong>At Least You Tried Life</strong> — a space for real stories, lessons, and experiments about what it means to live well in a messy, modern world.</p>
     <p>We write about the small things that make life a little easier, the hard things we keep trying at, and everything in between.</p>
   </main>
+  <section>
+    <h2>Read the Blog</h2>
+    <p>Check out our latest reflections and honest attempts at living better over on the <a href="/blog">blog</a>.</p>
+  </section>
 
   <footer>
     <p>© 2025 At Least You Tried Life. Built with care and caffeine.</p>
