--- a/site/admin/index.html
+++ b/site/admin/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>alytlife CMS</title>
-    <script src="https://unpkg.com/decap-cms@3.0.0/dist/decap-cms.js"></script>
+    <title>ALYTLife CMS</title>
+    <!-- Decap CMS latest release -->
+    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   </head>
   <body>
+    <!-- CMS will render here -->
   </body>
 </html>
